WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194484
libWPEWebKit-0.1.so: undefined reference to `JSC::JSValue::asCell() const
https://bugs.webkit.org/show_bug.cgi?id=194484
Summary
libWPEWebKit-0.1.so: undefined reference to `JSC::JSValue::asCell() const
Pablo Saavedra
Reported
2019-02-10 15:48:26 PST
A ld ERROR happens linking against WPE built VIDEO=disabled: -DENABLE_VIDEO=OFF -DPORT=WPE Error: /usr/lib/libWPEWebKit-0.1.so: undefined reference to `JSC::JSValue::asCell() const' collect2: error: ld returned 1 exit status $ readelf -s /usr/lib/libWPEWebKit-0.1.so | grep -i asCell 1271: 00000000 0 NOTYPE GLOBAL DEFAULT UND _ZNK3JSC7JSValue6asCellEv Related to:
https://bugs.webkit.org/show_bug.cgi?id=194341
Ref1:
https://trac.webkit.org/changeset/240315/webkit
Ref2:
https://github.com/Igalia/meta-webkit/issues/66
Attachments
patch
(1.14 KB, patch)
2019-02-10 15:52 PST
,
Pablo Saavedra
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pablo Saavedra
Comment 1
2019-02-10 15:48:57 PST
`#include <JavaScriptCore/JSCJSValueInlines.h>` is missing in Source/WebCore/bindings/js/JSUndoItemCustom.cpp
Pablo Saavedra
Comment 2
2019-02-10 15:52:59 PST
Created
attachment 361648
[details]
patch
WebKit Commit Bot
Comment 3
2019-02-10 16:29:41 PST
Comment on
attachment 361648
[details]
patch Clearing flags on attachment: 361648 Committed
r241253
: <
https://trac.webkit.org/changeset/241253
>
WebKit Commit Bot
Comment 4
2019-02-10 16:29:43 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-02-10 16:30:30 PST
<
rdar://problem/47951970
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug