libWPEWebKit-0.1.so: undefined reference to `JSC::JSValue::asCell() const https://bugs.webkit.org/show_bug.cgi?id=194484

Patch by Pablo Saavedra <psaavedra@igalia.com> on 2019-02-10
Reviewed by Darin Adler.

* bindings/js/JSUndoItemCustom.cpp:

Canonical link: https://commits.webkit.org/208912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241253 268f45cc-cd09-0410-ab3c-d52691b4dbfc